terraform-examples/ec2.tf
resource "aws_instance" "demo-instance" {
  ami           = "qwert234567"
  instance_type = "t2.micro"
}
