terraform-examples/import-block.tf
resource "aws_instance" "webserver" {

}

# terraform import aws_instance.webserver "unique identifier of the instance like ami-id"

# it basically retrieve the instance details and add to the existing terraform existing confiuaration
