terraform-examples/protect-instance-from-deletion.tf
# To ensure that the instances provisioned through Terraform on AWS are not accidentally deleted, you can use the `lifecycle` block with the `prevent_destroy` attribute in your Terraform configuration. Here's how you can do it:

# 1. **Add the `lifecycle` block to your resource**:
#    ```hcl
resource "aws_instance" "example" {
  ami           = "ami-12345678"
  instance_type = "t2.micro"

  lifecycle {
    prevent_destroy = true
  }

  tags = {
    Name = "example-instance"
  }
}
#    ```

# 2. **Enable termination protection** for the EC2 instance:
#    ```hcl
resource "aws_instance" "example" {
  ami           = "ami-12345678"
  instance_type = "t2.micro"

  disable_api_termination = true

  tags = {
    Name = "example-instance"
  }
}
#    ```

### Explanation:
# - **`prevent_destroy`**: This attribute ensures that Terraform will not destroy the resource. If you attempt to run `terraform destroy`, it will return an error message[1](https://developer.hashicorp.com/terraform/tutorials/state/resource-lifecycle).
# - **`disable_api_termination`**: This attribute sets the termination protection on the EC2 instance, preventing it from being terminated through the AWS console or API[2](https://stackoverflow.com/questions/47432238/terraform-aws-how-to-prevent-ebs-volumes-from-being-deleted).

# By using these configurations, you can safeguard your instances from accidental deletion. If you need to remove the protection temporarily, you can set `prevent_destroy` to `false` and `disable_api_termination` to `false`, apply the changes, and then proceed with the deletion.

# Would you like more details on any specific part of this process?
